# reflex

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  next_tasks.md
.github/workflows/: ci.yml
crates/reflex-cache/: Cargo.toml  README.md
crates/reflex-cache/examples/: basic_lookup.rs  config_from_env.rs  custom_embedder.rs
crates/reflex-cache/src/: constants.rs  lib.rs
crates/reflex-cache/src/cache/: l1.rs  mod.rs  tiered.rs
crates/reflex-cache/src/cache/l2/: backend.rs  cache.rs  tests.rs
crates/reflex-cache/src/config/: tests.rs
crates/reflex-cache/src/embedding/: utils.rs
crates/reflex-cache/src/embedding/reranker/: error.rs  tests.rs
crates/reflex-cache/src/embedding/sinter/: mod.rs  tests.rs
crates/reflex-cache/src/lifecycle/: config.rs  factory.rs  manager.rs  mod.rs  tests.rs
crates/reflex-cache/src/payload/: mod.rs
crates/reflex-cache/src/scoring/: mod.rs  scorer.rs  tests.rs  types.rs
crates/reflex-cache/src/storage/: model.rs
crates/reflex-cache/src/storage/mmap/: mod.rs  tests.rs
crates/reflex-cache/src/storage/nvme/: error.rs  mod.rs  tests.rs
crates/reflex-cache/src/storage/writer/: mod.rs
crates/reflex-cache/src/vectordb/: error.rs  mock.rs  mod.rs  model.rs  tests.rs
crates/reflex-cache/src/vectordb/bq/: backend.rs  mock.rs  mod.rs  tests.rs
crates/reflex-cache/src/vectordb/rescoring/: tests.rs
crates/reflex-cache/tests/: hashing_integration.rs  storage_integration.rs
crates/reflex-cache/tests/common/: fixtures.rs  mod.rs
crates/reflex-server/: Cargo.toml  README.md
crates/reflex-server/src/: lib.rs  main.rs
crates/reflex-server/src/gateway/: adapter.rs  error.rs  handler.rs  handler_tests.rs  mod.rs  payload.rs  state.rs  streaming.rs
crates/reflex-server/tests/: benchmark_real.rs  coding_patterns_tests.rs  integration_real.rs  knowledge_graph_tests.rs  request_shape_tests.rs  reranker_tests.rs
crates/reflex-server/tests/common/: harness.rs  mod.rs
examples/: basic_lookup.rs  config_from_env.rs  custom_embedder.rs
src/: check_genai.rs  constants.rs  lib.rs  main.rs
src/cache/: l1.rs  l1_tests.rs  mod.rs  tiered.rs  tiered_tests.rs  types.rs
src/cache/l2/: backend.rs  cache.rs  config.rs  error.rs  loader.rs  mock.rs  mod.rs  types.rs
src/config/: error.rs  mod.rs
src/embedding/: bert.rs  device.rs  error.rs  mod.rs
src/embedding/reranker/: config.rs  error.rs  mod.rs
src/embedding/sinter/: config.rs  mod.rs  model.rs
src/gateway/: error.rs  handler.rs  handler_tests.rs  mod.rs  state.rs  streaming.rs
src/hashing/: mod.rs
src/lifecycle/: cloud.rs  config.rs  error.rs  factory.rs  manager.rs  mod.rs  types.rs
src/payload/: mod.rs
src/scoring/: error.rs  mod.rs  scorer.rs  types.rs
src/storage/: error.rs  mod.rs  model.rs
src/storage/mmap/: config.rs  error.rs  mod.rs
src/storage/nvme/: error.rs  mod.rs
src/storage/writer/: mod.rs
src/vectordb/: client.rs  error.rs  mock.rs  mod.rs  model.rs  rescoring.rs
src/vectordb/bq/: backend.rs  client.rs  config.rs  mock.rs  mod.rs  utils.rs
tests/: e2e_tests.rs  qdrant_mock.rs
tests/common/: harness.rs  http_client.rs  mod.rs
